relocated generic elements to shared bounded context

--- a/BeatClub.API/BeatClub.API.csproj
+++ b/BeatClub.API/BeatClub.API.csproj
@@ -18,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="BeatClub\Persistence\Contexts" />
       <Folder Include="Shared\Domain\Services" />
     </ItemGroup>
 
