--- a/BeatClub.API/BeatClub.API.csproj
+++ b/BeatClub.API/BeatClub.API.csproj
@@ -22,6 +22,8 @@
 
     <ItemGroup>
       <Folder Include="BeatClub\Persistence\Contexts" />
+      <Folder Include="Security\Domain\Repositories" />
+      <Folder Include="Security\Domain\Services\Communication" />
       <Folder Include="Shared\Domain\Services" />
     </ItemGroup>
 
