--- a/BeatClub.API/BeatClub.API.csproj
+++ b/BeatClub.API/BeatClub.API.csproj
@@ -22,6 +22,9 @@
 
     <ItemGroup>
       <Folder Include="BeatClub\Persistence\Contexts" />
+      <Folder Include="Security\Authorization\Attributes" />
+      <Folder Include="Security\Authorization\Handlers" />
+      <Folder Include="Security\Authorization\Middleware" />
       <Folder Include="Shared\Domain\Services" />
     </ItemGroup>
 
