--- a/BeatClub.API/BeatClub.API.csproj
+++ b/BeatClub.API/BeatClub.API.csproj
@@ -24,6 +24,7 @@
       <Folder Include="BeatClub\Persistence\Contexts" />
       <Folder Include="Security\Authorization\Attributes" />
       <Folder Include="Security\Authorization\Middleware" />
+      <Folder Include="Security\Service" />
       <Folder Include="Shared\Domain\Services" />
     </ItemGroup>
 
