--- a/BeatClub.API/appsettings.json
+++ b/BeatClub.API/appsettings.json
@@ -4,7 +4,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;user=root;password=root;database=beatclub"
+    "DefaultConnection": "server=beatclubapidbserver123.database.windows.net;user=josmar@beatclubapidbserver123;password=Aries123#;database=BeatClub.API_db"
   },
   "Logging": {
     "LogLevel": {
